# ampav-parakeet

./: README.md  pyproject.toml
ampav/parakeet/: transcribe.py
